@@ -1,5 +1,5 @@
 LeptonType = electron						# electron or muon
-BTaggingMethod = WorkingPoint 					# Notag,Veto,VetoNoFit,WorkingPoint
+BTaggingMethod = WorkingPoint					# Notag,Veto,VetoLight,VetoBoth,VetoNoFit,VetoNoFitLight,VetoNoFitBoth,WorkingPoint
 CutBTagging = 0.601713
 FlagTopMassFixed = false
 TopPoleMass = 172.5
